--- a/vinebrot.html
+++ b/vinebrot.html
@@ -197,33 +197,33 @@
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
-            <a href="https://obsidianmango.github.io/ObsidianMango/vinobrot.html">
+            <a href="https://lsbottleshop.github.io/home/vinobrot.html">
                 <img src="logo.png" alt="Little Silver Bottle Shop Logo">
             </a>
-            <div class="nav-button home-nav-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/VINOO.html')">🍇 Varietals</div>
-            <div class="nav-button wine-nav-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/wine.html')">🍷 Search Selection</div>
-            <div class="nav-button food-nav-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/food.html')">🍽 Food Pairings</div>
-            <div class="nav-button food-keg-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/dplan')">🍻 Drink Planner</div>
-            <div class="nav-button food-cho-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/boozy.html')">🥃 Can't Decide?</div>
+            <div class="nav-button home-nav-button" onclick="loadPage('https://lsbottleshop.github.io/home/VINOO.html')">🍇 Varietals</div>
+            <div class="nav-button wine-nav-button" onclick="loadPage('https://lsbottleshop.github.io/home/wine.html')">🍷 Search Selection</div>
+            <div class="nav-button food-nav-button" onclick="loadPage('https://lsbottleshop.github.io/home/food.html')">🍽 Food Pairings</div>
+            <div class="nav-button food-keg-button" onclick="loadPage('https://lsbottleshop.github.io/home/dplan')">🍻 Drink Planner</div>
+            <div class="nav-button food-cho-button" onclick="loadPage('https://lsbottleshop.github.io/home/boozy.html')">🥃 Can't Decide?</div>
         </div>
         <!-- Main Content Area -->
         <div class="content">
             <div id="landing-container" class="landing-container">
                 <h2>Welcome to Little Silver Bottle Shop</h2>
                 <div class="button-container">
-                    <div class="button wine-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/wine.html')">
+                    <div class="button wine-button" onclick="loadPage('https://lsbottleshop.github.io/home/wine.html')">
                         🍷
                         <p>Explore Wines</p>
                     </div>
-                    <div class="button food-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/food.html')">
+                    <div class="button food-button" onclick="loadPage('https://lsbottleshop.github.io/home/food.html')">
                         🍽
                         <p>Find Pairings</p>
                     </div>
-                    <div class="button keg-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/dplan')">
+                    <div class="button keg-button" onclick="loadPage('https://lsbottleshop.github.io/home/dplan')">
                         🍻
                         <p>Drink Planner</p>
                     </div>
-                    <div class="button varietal-button" onclick="loadPage('https://obsidianmango.github.io/ObsidianMango/VINOO.html')">
+                    <div class="button varietal-button" onclick="loadPage('https://lsbottleshop.github.io/home/VINOO.html')">
                         🍇
                         <p>Discover Varietals</p>
                     </div>
