--- a/vinebrot.html
+++ b/vinebrot.html
@@ -197,7 +197,7 @@
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
-            <a href="https://lsbottleshop.github.io/home/vinobrot.html">
+            <a href="https://lsbottleshop.github.io/home/vinebrot.html">
                 <img src="logo.png" alt="Little Silver Bottle Shop Logo">
             </a>
             <div class="nav-button home-nav-button" onclick="loadPage('https://lsbottleshop.github.io/home/VINOO.html')">🍇 Varietals</div>
