--- a/wine.html
+++ b/wine.html
@@ -149,9 +149,9 @@
             padding: 20px;
             background-color: #fff;
             border: 2px solid #8b0000;
-            z-index: 1003;
-            width: 90%;
-            max-width: 600px;
+            z-index: 1004; /* Higher than overlay */
+            width: fit-content;
+            max-width: 90%;
             box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.2);
             border-radius: 12px;
             overflow-y: auto;
@@ -186,7 +186,7 @@
 
         #wine-image {
             width: auto;
-            height: 440px; /* Doubled from previous 220px */
+            height: 440px;
             object-fit: contain;
             border-radius: 8px;
             display: none;
@@ -205,6 +205,18 @@
             font-weight: bold;
             text-align: center;
             display: block;
+        }
+
+        /* Overlay Styles */
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.3); /* Slightly dim background */
+            z-index: 1003; /* Below popup */
         }
 
         /* Filter Menu Styles */
@@ -347,7 +359,7 @@
             }
 
             #wine-image {
-                height: 340px; /* Doubled from previous 170px */
+                height: 340px;
                 margin-top: 0; /* No top margin on mobile */
             }
         }
@@ -372,6 +384,9 @@
     </div>
 
     <div id="results"></div>
+
+    <!-- Overlay for dimming background -->
+    <div id="overlay"></div>
 
     <div id="popup">
         <h2 id="wine-name"></h2>
@@ -682,7 +697,13 @@
                 wineImage.style.display = 'none';
             }
 
+            document.getElementById('overlay').style.display = 'block';
             document.getElementById('popup').style.display = 'block';
+        }
+
+        function closePopup() {
+            document.getElementById('popup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
         }
 
         function sortWinesByPrice() {
@@ -762,6 +783,9 @@
                     placeholder.classList.remove('fixed');
                 }
             }, 100));
+
+            // Add event listener for overlay click to close popup
+            document.getElementById('overlay').addEventListener('click', closePopup);
         });
 
         document.getElementById('search-input').addEventListener('input', function() {
@@ -809,9 +833,7 @@
 
         document.getElementById('sort-price-button').addEventListener('click', sortWinesByPrice);
 
-        document.getElementById('popup-close').addEventListener('click', function() {
-            document.getElementById('popup').style.display = 'none';
-        });
+        document.getElementById('popup-close').addEventListener('click', closePopup);
     </script>
 </body>
 </html>
