--- a/wine.html
+++ b/wine.html
@@ -353,14 +353,14 @@
             }
 
             #wine-details {
-                flex-direction: column;
-                align-items: center;
-                justify-content: flex-start;
+                flex-direction: row; /* Keep side-by-side on mobile */
+                align-items: flex-start;
+                justify-content: center;
             }
 
             #wine-image {
                 height: 340px;
-                margin-top: 0; /* No top margin on mobile */
+                margin-top: 5px;
             }
         }
     </style>
