--- a/dplan/index.html
+++ b/dplan/index.html
@@ -68,25 +68,6 @@
         td { background: #f9fbff;}
         .emoji { font-size: 2.5rem; vertical-align: middle; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .enhance {
-            display: inline-block;
-            transform-origin: center;
-            animation: bottleEnhance 1.5s ease-out;
-        }
-        @keyframes bottleEnhance {
-            0% {
-                transform: scale(1);
-                text-shadow: none;
-            }
-            30% {
-                transform: scale(1.3);
-                text-shadow: 0 0 5px gold;
-            }
-            100% {
-                transform: scale(1);
-                text-shadow: none;
-            }
-        }
     </style>
 </head>
 <body>
@@ -305,11 +286,11 @@
                 let btn = document.querySelector(".drink-type-btn[data-type='" + type + "']");
                 btn.classList.remove('heavy','extreme','off');
                 btn.classList.add('selected');
-                btn.dataset.state = 'normal";
+                btn.dataset.state = 'normal';
                 drinkStates[type] = 'normal';
                 btn.querySelector('img').src = type + "-normal.png";
                 // Reset label
-                let label = document.getElementById("power-' + type);
+                let label = document.getElementById("power-" + type);
                 POWER_CLASSES.forEach(pc => label.classList.remove(pc));
                 label.textContent = 'Normal';
                 label.classList.add('power-normal');
@@ -323,41 +304,23 @@
             beer:   [0.9, 1.5, 1.8]
         };
         const durations = ["1-2 Hours", "3-4 Hours", "4+ Hours"];
-        let prevBottles = [
-          [0, 0, 0],
-          [0, 0,0],
-          [0,0,0]
-        ];
         function updateAlcTable(guests) {
             guests = guests || Number(guestSlider.value);
-            let newBottles = [];
+            let body = '';
             for (let i = 0; i < 3; i++) {
-                let row = [];
+                body += `<tr><td>${durations[i]}</td>`;
                 DRINK_TYPES.forEach(type => {
                     let state = drinkStates[type];
                     let factor = 0;
                     if (state === 'normal') factor = 1;
                     else if (state === 'heavy') factor = 1.5;
                     else if (state === 'extreme') factor = 2;
-                    let val = state === "off" ? 0 : Math.ceil(guests * drinkRatios[type][i] * factor);
-                    row.push(val);
+                    let val = state === "off" ? 0 : guests * drinkRatios[type][i] * factor;
+                    body += `<td>${state === 'off' ? '-' : Math.ceil(val) + ' bottles'}</td>`;
                 });
-                newBottles.push(row);
-            }
-            let body = '';
-            for (let i = 0; i < 3; i++) {
-                body += `<tr><td>${durations[i]}</td>`;
-                for (let j = 0; j < 3; j++) {
-                    let val = newBottles[i][j];
-                    let content = val === 0 ? '-' : val + ' bottles';
-                    let isEnhance = (val > prevBottles[i][j] && val !== 0);
-                    body += `<td>${isEnhance ? '<span class="enhance">' + content + '</span>' : content}</td>`;
-                }
                 body += '</tr>';
             }
             document.getElementById('alc-table-body').innerHTML = body;
-            // Update prevBottles
-            prevBottles = newBottles.map(row => row.slice());
         }
         // On page load
         updateAlcTable();
