--- a/wine.html
+++ b/wine.html
@@ -186,7 +186,7 @@
 
         #wine-image {
             width: auto;
-            height: 500px; /* Reduced from 600px to make it smaller */
+            height: 333px; /* 2/3 of previous 500px */
             object-fit: contain;
             border-radius: 8px;
             display: none;
@@ -355,12 +355,12 @@
 
             #wine-details {
                 flex-direction: row;
-                align-items: flex-start;
+                align-items: center; /* Vertically center image with details */
                 justify-content: center;
             }
 
             #wine-image {
-                height: 250px; /* Reduced from 200px to make it smaller on mobile */
+                height: 250px;
                 margin-top: 5px;
             }
         }
