--- a/VINOO.html
+++ b/VINOO.html
@@ -84,7 +84,7 @@
     <script>
         function openAndPopulate(wineType) {
             // Navigate to the target page with the wine type as a query parameter
-            const targetUrl = `https://obsidianmango.github.io/ObsidianMango/wine.html?wine=${encodeURIComponent(wineType)}`;
+            const targetUrl = `https://lsbottleshop.github.io/home/wine.html?wine=${encodeURIComponent(wineType)}`;
             window.location.href = targetUrl;
         }
     </script>
