--- a/food.html
+++ b/food.html
@@ -1492,7 +1492,7 @@ const uniqueBases = [
         }
 
         function openWinePage(wine) {
-            const url = `https://obsidianmango.github.io/ObsidianMango/wine.html?wine=${encodeURIComponent(wine)}`;
+            const url = `https://lsbottleshop.github.io/home/wine.html?wine=${encodeURIComponent(wine)}`;
             window.open(url, '_self'); 
         }
 
